@@ -3,7 +3,7 @@
 DOMAIN='rg.prenotazioni'
 
 i18ndude rebuild-pot --pot locales/${DOMAIN}.pot --create ${DOMAIN} .
-
+i18ndude merge --pot locales/${DOMAIN}.pot --merge locales/${DOMAIN}-manual.pot
 i18ndude sync --pot locales/${DOMAIN}.pot locales/*/LC_MESSAGES/${DOMAIN}.po
 
 # Compile po files
