@@ -1,10 +1,10 @@
 <?xml version="1.0"?>
 <object name="PrenotazioniFolder"
    meta_type="Factory-based Type Information with dynamic views"
-   i18n:domain="plone" xmlns:i18n="http://xml.zope.org/namespaces/i18n">
-  <property name="title" i18n:translate="">PrenotazioniFolder</property>
+   i18n:domain="rg.prenotazioni" xmlns:i18n="http://xml.zope.org/namespaces/i18n">
+  <property name="title" i18n:translate="">Booking Folder</property>
   <property name="description"
-    i18n:translate="">Description of the Example Type</property>
+    i18n:translate="">A folder that will contain booking</property>
   <property name="content_meta_type">PrenotazioniFolder</property>
   <property name="content_icon">folder_icon.gif</property>
   <property name="product">rg.prenotazioni</property>
