@@ -16,6 +16,7 @@ Changelog
 - Do not show reservation object in navigation [keul]
 - Removed useless portal_skins elements [keul]
 - Removed bad ploneCustom.css css, moved to a dedicated CSS [keul]
+- Content types are now in english and translated [keul]
 
 1.0.2 (2012/09/07)
 ==================
